# pico-link

./: .gitignore  CMakeLists.txt  README.md  rp2040.cfg
Core/: CMakeLists.txt
Core/Inc/: DAP.h  DAP_config.h  DAP_queue.h  dap_strings.h  io_config.h  main.h  tusb_config.h  virtual_UART.h
Core/Src/: DAP.c  DAP_queue.c  SW_DP.c  main.c  usb_descriptors.c  virtual_UART.c
Firmware/: pico-link.elf  pico-link.hex  pico-link.uf2
firmware/: pico-link.elf  pico-link.hex  pico-link.uf2
tools/openocd-patched/share/info/: openocd.info  openocd.info-1  openocd.info-2
